z-index fix for previewless composer

--- a/app/assets/stylesheets/desktop/compose.scss
+++ b/app/assets/stylesheets/desktop/compose.scss
@@ -85,6 +85,10 @@
   padding: 10px 10px 35px 10px;
   box-shadow: shadow("card");
   background: $highlight-medium;
+  .hide-preview & {
+    z-index: z("composer","dropdown") + 1;    
+  }
+  
 
   &.urgent {
     background: $danger-low;
